// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders with a negative score 1`] = `
<styled.section>
  <styled.div>
    <Progress
      color="#333"
      progress={-50}
    />
  </styled.div>
  <styled.div />
  <styled.div />
</styled.section>
`;

exports[`ProgressBar renders with a positive score 1`] = `
<styled.section>
  <styled.div />
  <styled.div />
  <styled.div>
    <Progress
      color="#333"
      progress={50}
    />
  </styled.div>
</styled.section>
`;

exports[`ProgressBar renders with a score of zero 1`] = `
<styled.section>
  <styled.div>
    <Progress
      color="#333"
      progress={-50}
    />
  </styled.div>
  <styled.div />
  <styled.div />
</styled.section>
`;
